force-app/main/default/objects/Procedure_Repository__c/Procedure_Repository__c.object-meta.xml
<CustomObject>
    <description>This object holds data related to procedure</description>
    <label>Procedure Repository</label>
    <nameField>
        <label>Procedure Repository Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procedure Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>