force-app/main/default/objects/Procedure_Repository__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who approved the current version of the procedure</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Procedure_Repositorys</relationshipName>
    <type>Lookup</type>
</CustomField>