force-app/main/default/objects/Procedure_Repository__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Date procedure&apos;s last update was 
approved</description>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>