force-app/main/default/objects/Procedure_Repository__c/fields/Department_Head_Email__c.field-meta.xml
<CustomField>
    <fullName>Department_Head_Email__c</fullName>
    <defaultValue>&quot;ishita.saxena263@gmail.com&quot;</defaultValue>
    <label>Department Head Email</label>
    <type>Email</type>
</CustomField>