force-app/main/default/objects/Procedure_Repository__c/fields/Procedure_ID1__c.field-meta.xml
<CustomField>
    <fullName>Procedure_ID1__c</fullName>
    <formula>HYPERLINK (&quot;/&quot;&amp; Id, Procedure_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Procedure ID</label>
    <type>Text</type>
</CustomField>