force-app/main/default/objects/Procedure_Repository__c/fields/Procedure_ID__c.field-meta.xml
<CustomField>
    <fullName>Procedure_ID__c</fullName>
    <displayFormat>PROC-{0000}</displayFormat>
    <label>Procedure ID</label>
    <type>AutoNumber</type>
</CustomField>