force-app/main/default/objects/Procedure_Repository__c/fields/Procedure_Overview__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Overview__c</fullName>
    <description>Overview of the purpose of the procedure</description>
    <label>Procedure  Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>