force-app/main/default/objects/Procedure_Repository__c/fields/Procedure_Request__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Procedure Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Procedure Repositories</relationshipLabel>
    <relationshipName>Procedure_Repositories</relationshipName>
    <type>Lookup</type>
</CustomField>