force-app/main/default/objects/Procedure_Repository__c/fields/Procedure_Title__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Title__c</fullName>
    <description>Short name for the procedure</description>
    <label>Procedure Title</label>
    <type>TextArea</type>
</CustomField>