force-app/main/default/objects/Procedure_Repository__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Indicates the current variation reference of the procedure</description>
    <label>Version</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>