force-app/main/default/objects/Procedure_Repository__c/validationRules/Lock_After_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_After_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Procedure_Status__c ), &quot;Approved&quot;) &amp;&amp;
NOT(ISPICKVAL(Procedure_Status__c , &quot;Approved&quot;))</errorConditionFormula>
    <errorMessage>Change Status is not allowed for Approved Procedure.</errorMessage>
</ValidationRule>