force-app/main/default/objects/Procedure_Repository__c/validationRules/Lock_The_Record_After_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_The_Record_After_Approval</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Procedure_Status__c ,&quot;Approved&quot;) &amp;&amp; ISPICKVAL(PRIORVALUE(Procedure_Status__c ), &quot;Approved&quot;)</errorConditionFormula>
    <errorMessage>Procedure cannot be modified once approved. Please create a new request for modification.</errorMessage>
</ValidationRule>