force-app/main/default/objects/Procedure_Repository__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Procedure_ID1__c</columns>
    <columns>NAME</columns>
    <columns>Procedure_Title__c</columns>
    <columns>Procedure_Overview__c</columns>
    <columns>Department__c</columns>
    <columns>Procedure_Status__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>