force-app/main/default/objects/Procedure_Repository__c/listViews/Legal_Team_Procedure_Repository.listView-meta.xml
<ListView>
    <fullName>Legal_Team_Procedure_Repository</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal Team</label>
    <queue>Legal_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>