force-app/main/default/objects/Procedure_Repository__c/listViews/Procedure_Team_Procedure_Repository.listView-meta.xml
<ListView>
    <fullName>Procedure_Team_Procedure_Repository</fullName>
    <filterScope>Queue</filterScope>
    <label>Procedure Team</label>
    <queue>Procedure_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>